--- a/Todolist8b/src/main/resources/i18n/ValidationMessages_en.properties
+++ b/Todolist8b/src/main/resources/i18n/ValidationMessages_en.properties
@@ -1,8 +1,15 @@
 #Title
 NotBlank.todoData.title=Title is required.
+DoubleSpace.todoData.title=Title is a double space.
 
 #Importance
 NotNull.todoData.importance=Select the importance.
 
 #Urgency
 Min.todoData.urgency=Select the urgency.
+
+#Deadline
+Past.todoData.deadline=Deadline is past.
+InvalidFormat.todoData.deadline=Deadline in the yyyy-mm-dd format.
+InvalidFormat.todoQuery.deadlineFrom=Deadline_from in the yyyy-mm-dd format.
+InvalidFormat.todoQuery.deadlineTo=Deadline_to in the yyyy-mm-dd format.
